--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "babel-plugin-minify-dead-code-elimination": "^0.5.2",
+    "crypto": "^1.0.1",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.1",
     "file-loader": "^6.2.0",
     "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "postcss-loader": "^8.1.1",
     "process": "^0.11.10",
     "sass": "^1.89.2",
@@ -47,5 +51,10 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "scss-reset": "^1.4.6"
+  },
+  "resolve": {
+    "fallback": {
+      "crypto": false
+    }
   }
 }
